move some classes into namespaces

--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -74,11 +74,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\ActiveSpellEffect.cs" />
+    <Compile Include="src\Models\ActiveSpellEffect.cs" />
     <Compile Include="src\AbilityTools.cs" />
-    <Compile Include="src\MemorisedAbilityHudEntry.cs" />
-    <Compile Include="src\ActiveSpellEffectHudEntry.cs" />
-    <Compile Include="src\AdventureClass.cs" />
+    <Compile Include="src\Models\MemorisedAbilityHudEntry.cs" />
+    <Compile Include="src\Models\ActiveSpellEffectHudEntry.cs" />
+    <Compile Include="src\Models\AdventureClass.cs" />
     <Compile Include="src\AdventureClassTools.cs" />
     <Compile Include="src\Behaviors\EntityBehaviorWeapon.cs" />
     <Compile Include="src\Behaviors\EntityBehaviorCasting.cs" />
@@ -87,11 +87,11 @@
     <Compile Include="src\Behaviors\EntityBehaviorSpellEffects.cs" />
     <Compile Include="src\Behaviors\EntityBehaviorSpellTargetable.cs" />
     <Compile Include="src\Behaviors\EntityBehaviorStatistics.cs" />
-    <Compile Include="src\DamageHitInfo.cs" />
-    <Compile Include="src\DamageTypeClass.cs" />
-    <Compile Include="src\EffectCombo.cs" />
+    <Compile Include="src\Models\DamageHitInfo.cs" />
+    <Compile Include="src\Models\DamageTypeClass.cs" />
+    <Compile Include="src\Models\EffectCombo.cs" />
     <Compile Include="src\Entities\EntityMagicProjectile.cs" />
-    <Compile Include="src\ExtendedEnumDamageType.cs" />
+    <Compile Include="src\Models\ExtendedEnumDamageType.cs" />
     <Compile Include="src\Extensions\IWorldAccessorExt.cs" />
     <Compile Include="src\Gui\GuiDialogSkills.cs" />
     <Compile Include="src\Gui\GuiDialogExperience.cs" />
@@ -99,9 +99,9 @@
     <Compile Include="src\Gui\HudMemorisedSpells.cs" />
     <Compile Include="src\Gui\HudActiveEffects.cs" />
     <Compile Include="src\Gui\HudAbility.cs" />
-    <Compile Include="src\InventoryCompass.cs" />
-    <Compile Include="src\ItemSlotCompass.cs" />
-    <Compile Include="src\ItemSlotScroll.cs" />
+    <Compile Include="src\Inventories\InventoryCompass.cs" />
+    <Compile Include="src\ItemSlots\ItemSlotCompass.cs" />
+    <Compile Include="src\ItemSlots\ItemSlotScroll.cs" />
     <Compile Include="src\MathUtils.cs" />
     <Compile Include="src\Packets\ClearCastingPacket.cs" />
     <Compile Include="src\Packets\ClientRequestFinishCastingPacket.cs" />
@@ -111,7 +111,7 @@
     <Compile Include="src\Packets\UpdateMemorisedSpellsPacket.cs" />
     <Compile Include="src\Packets\UpdateActiveEffectsHudPacket.cs" />
     <Compile Include="src\Randomise.cs" />
-    <Compile Include="src\SkillType.cs" />
+    <Compile Include="src\Models\SkillType.cs" />
     <Compile Include="src\SkillUtils.cs" />
     <Compile Include="src\Systems\EntityAgentOnDamageReplacerMod.cs" />
     <Compile Include="src\Systems\SystemSpellCrafting.cs" />
@@ -121,23 +121,23 @@
     <Compile Include="src\Systems\SystemCharacterMemorisationInventory.cs" />
     <Compile Include="src\Gui\GuiDialogMemoriseAbility.cs" />
     <Compile Include="src\Gui\HudManaBar.cs" />
-    <Compile Include="src\InventoryPlayerMemorisation.cs" />
+    <Compile Include="src\Inventories\InventoryPlayerMemorisation.cs" />
     <Compile Include="src\Items\InkwellAndQuillEmptyItem.cs" />
     <Compile Include="src\Items\InkwellEmptyItem.cs" />
-    <Compile Include="src\MagicPowerSlot.cs" />
+    <Compile Include="src\Models\MagicPowerSlot.cs" />
     <Compile Include="src\Items\RunicInkwellItem.cs" />
     <Compile Include="src\Items\RunicInkwellAndQuillItem.cs" />
     <Compile Include="src\Items\InkwellAndQuillItem.cs" />
     <Compile Include="src\Items\InkwellItem.cs" />
     <Compile Include="src\Items\CrushedPowerItem.cs" />
-    <Compile Include="src\MagicWord.cs" />
+    <Compile Include="src\Models\MagicWord.cs" />
     <Compile Include="src\PlayerNameUtils.cs" />
-    <Compile Include="src\PowerLevel.cs" />
-    <Compile Include="src\ResistType.cs" />
+    <Compile Include="src\Models\PowerLevel.cs" />
+    <Compile Include="src\Models\ResistType.cs" />
     <Compile Include="src\RunicTools.cs" />
-    <Compile Include="src\SpellEffectIndex.cs" />
+    <Compile Include="src\Models\SpellEffectIndex.cs" />
     <Compile Include="src\Systems\SystemActiveEffects.cs" />
-    <Compile Include="src\TargetType.cs" />
+    <Compile Include="src\Models\TargetType.cs" />
     <Compile Include="src\WorldLimits.cs" />
     <Content Include="assets\game\config\characterclasses.json" />
     <Content Include="assets\game\lang\en.json" />
@@ -421,14 +421,14 @@
     <Content Include="assets\game\patches\entity-add-experience-behavior.json" />
     <Compile Include="src\EntityUtils.cs" />
     <Compile Include="src\Extensions\PlayerUtils.cs" />
-    <Compile Include="src\StatType.cs" />
-    <Compile Include="src\SpellEffectType.cs" />
+    <Compile Include="src\Models\StatType.cs" />
+    <Compile Include="src\Models\SpellEffectType.cs" />
     <Compile Include="src\Systems\SystemMana.cs" />
     <Compile Include="src\Systems\SystemStatistics.cs" />
     <Compile Include="src\Items\RuneOfPowerItem.cs" />
     <Compile Include="src\Behaviors\EntityBehaviorExperience.cs" />
     <Compile Include="src\Extensions\EntityExt.cs" />
-    <Compile Include="src\Ability.cs" />
+    <Compile Include="src\Models\Ability.cs" />
     <Compile Include="src\Items\AbilityScrollItem.cs" />
     <Compile Include="src\Items\AbilityBookItem.cs" />
     <Compile Include="src\Systems\SystemAbilities.cs" />
