--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -93,12 +93,12 @@
     <Compile Include="src\Entities\EntityMagicProjectile.cs" />
     <Compile Include="src\Models\ExtendedEnumDamageType.cs" />
     <Compile Include="src\Extensions\IWorldAccessorExt.cs" />
-    <Compile Include="src\Gui\GuiDialogSkills.cs" />
-    <Compile Include="src\Gui\GuiDialogExperience.cs" />
-    <Compile Include="src\Gui\GuiDialogCompass.cs" />
-    <Compile Include="src\Gui\HudMemorisedSpells.cs" />
-    <Compile Include="src\Gui\HudActiveEffects.cs" />
-    <Compile Include="src\Gui\HudAbility.cs" />
+    <Compile Include="src\Gui\Dialog\GuiDialogSkills.cs" />
+    <Compile Include="src\Gui\Dialog\GuiDialogExperience.cs" />
+    <Compile Include="src\Gui\Dialog\GuiDialogCompass.cs" />
+    <Compile Include="src\Gui\Hud\HudMemorisedSpells.cs" />
+    <Compile Include="src\Gui\Hud\HudActiveEffects.cs" />
+    <Compile Include="src\Gui\Hud\HudAbility.cs" />
     <Compile Include="src\Inventories\InventoryCompass.cs" />
     <Compile Include="src\ItemSlots\ItemSlotCompass.cs" />
     <Compile Include="src\ItemSlots\ItemSlotScroll.cs" />
@@ -119,8 +119,8 @@
     <Compile Include="src\Systems\SystemSkills.cs" />
     <Compile Include="src\Systems\SystemCompassInventory.cs" />
     <Compile Include="src\Systems\SystemCharacterMemorisationInventory.cs" />
-    <Compile Include="src\Gui\GuiDialogMemoriseAbility.cs" />
-    <Compile Include="src\Gui\HudManaBar.cs" />
+    <Compile Include="src\Gui\Dialog\GuiDialogMemoriseAbility.cs" />
+    <Compile Include="src\Gui\Hud\HudManaBar.cs" />
     <Compile Include="src\Inventories\InventoryPlayerMemorisation.cs" />
     <Compile Include="src\Items\InkwellAndQuillEmptyItem.cs" />
     <Compile Include="src\Items\InkwellEmptyItem.cs" />
