--- a/mods/vsroleplayclasses/vsroleplayclasses.csproj
+++ b/mods/vsroleplayclasses/vsroleplayclasses.csproj
@@ -74,6 +74,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Behaviors\EntityBehaviorMoveSpeedAdjustable.cs" />
+    <Compile Include="src\Extensions\AiTaskSeekEntityExt.cs" />
+    <Compile Include="src\Extensions\AiTaskGotoEntityExt.cs" />
+    <Compile Include="src\Extensions\AiTaskStayCloseToEntityExt.cs" />
+    <Compile Include="src\Extensions\AiTaskWanderExt.cs" />
+    <Compile Include="src\Extensions\AiTaskFleeEntityExt.cs" />
     <Compile Include="src\Models\ActiveSpellEffect.cs" />
     <Compile Include="src\AbilityTools.cs" />
     <Compile Include="src\Models\MemorisedAbilityHudEntry.cs" />
@@ -452,6 +458,7 @@
     <Content Include="assets\game\patches\entity-add-interuptable-behavior.json" />
     <Content Include="assets\game\patches\entity-add-skillable-behavior.json" />
     <Content Include="assets\game\patches\entity-add-weapon-behavior.json" />
+    <Content Include="assets\game\patches\entity-add-movespeedadjustable-behavior.json" />
     <None Include="assets\game\patches\survival-blocktypes-wood-pan.json" />
     <None Include="assets\vsroleplayclasses\entities\air\magicprojectile.json" />
     <None Include="assets\vsroleplayclasses\itemtypes\inkwellandquillempty.json" />
